diagnostics: Add camera frame analysis routine
The camera frame analysis routine relies on the camera diagnostics
service to analyze the captured frames.

BUG=b:303183488
TEST=FEATURES=test emerge-volteer diagnostics
TEST=1. Open camera (e.g., open the "Camera" app or run `cca open`
        command).
     2. Run below "diag" command with privacy shutter on and off.
        (dut) cros-health-tool diag camera_frame_analysis

Cq-Depend: chromium:5524219, chromium:5528620
Change-Id: Ic6d4646947b8f6746ee725122fd20d89943d3328
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4756238
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>
Reviewed-by: Kerker Yang <kerker@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/routines/camera/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/camera/BUILD.gn
@@ -3,9 +3,13 @@
 # found in the LICENSE file.
 
 source_set("camera") {
-  sources = [ "camera_availability.cc" ]
+  sources = [
+    "camera_availability.cc",
+    "camera_frame_analysis.cc",
+  ]
   public_pkg_deps = [
     "libchrome",
+    "libcros_camera",
     "mojo_service_manager",
   ]
   pkg_deps = [ "system_api" ]
@@ -19,15 +23,20 @@ source_set("camera") {
 
 if (use.test) {
   source_set("camera_test") {
-    sources = [ "camera_availability_test.cc" ]
+    sources = [
+      "camera_availability_test.cc",
+      "camera_frame_analysis_test.cc",
+    ]
     pkg_deps = [
       "libchrome-test",
+      "libcros_camera",
       "mojo_service_manager",
       "system_api",
     ]
     deps = [
       ":camera",
       "//diagnostics/base:healthd_testrunner",
+      "//diagnostics/cros_healthd/fake",
       "//diagnostics/cros_healthd/routines:libroutine_test_utils",
       "//diagnostics/cros_healthd/system:test_support",
     ]
