--- a/diagnostics/cros_healthd/fake/BUILD.gn
+++ b/diagnostics/cros_healthd/fake/BUILD.gn
@@ -7,6 +7,7 @@ import("//common-mk/pkg_config.gni")
 if (use.test || use.fuzzer) {
   source_set("fake") {
     sources = [
+      "fake_camera_diagnostics.cc",
       "fake_chromium_data_collector.cc",
       "fake_network_diagnostics_routines.cc",
       "fake_network_health_service.cc",
@@ -17,6 +18,7 @@ if (use.test || use.fuzzer) {
     public_pkg_deps = [
       "iioservice_ipc",
       "libchrome",
+      "libcros_camera",
       "libmojo",
       "mojo_service_manager",
     ]
