--- a/diagnostics/cros_healthd/system/BUILD.gn
+++ b/diagnostics/cros_healthd/system/BUILD.gn
@@ -12,6 +12,7 @@ pkg_config("system_pkg_deps") {
     "libattestation-client",
     "libbrillo",
     "libchrome",
+    "libcros_camera",
     "libdebugd-client",
     "libmojo",
     "libpci",
@@ -89,6 +90,7 @@ if (use.test || use.fuzzer) {
   pkg_config("test_support_public_pkg_deps") {
     pkg_deps = [
       "iioservice_ipc",
+      "libcros_camera",
       "mojo_service_manager",
     ]
   }
