--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -240,6 +240,7 @@ generate_dbus_proxies("generate_bluetooth_proxies") {
 }
 
 generate_mojom_bindings("mojo_bindings") {
+  mojo_root = "${platform2_root}"
   sources = [ "mojom/passpoint.mojom" ]
 }
 
