camera: Allow cros_healthd to request camera diagnostics Mojo service
The frame analysis routine in cros_healthd uses the camera diagnostics
service.

BUG=b:303183488
TEST=CQ

Change-Id: I092706e941348df46f85bb6e8a88257e8ace6b1a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5524219
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Imran Ziad <imranziad@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>

--- a/camera/diagnostics/mojo/cros_camera_diagnostics_mojo.jsonc
+++ b/camera/diagnostics/mojo/cros_camera_diagnostics_mojo.jsonc
@@ -23,5 +23,11 @@
       "CrosCameraDiagnostics",
       "CrosCameraDiagnosticsService"
     ]
+  },
+  {
+    "identity": "u:r:cros_healthd:s0",
+    "request": [
+      "CrosCameraDiagnostics"
+    ]
   }
 ]
