camera: diagnostics: Add script to enable the service manually
Camera diagnostics service is currently deployed to /usr/local since
it's only enabled in test image. This script copies those files to
/ and starts the service.

BUG=b:304912538
TEST=Flash a device with ToT image and run the script

Change-Id: Iddec54b7846a6d3788e18f2ed5e2f2433fc59822
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5527073
Tested-by: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Juliana Chang <julianachang@chromium.org>
Commit-Queue: Imran Ziad <imranziad@chromium.org>

--- a/camera/diagnostics/BUILD.gn
+++ b/camera/diagnostics/BUILD.gn
@@ -13,6 +13,7 @@ group("all") {
     ":install_cros_camera_diagnostics_conf",
     ":install_cros_camera_diagnostics_mojo",
     ":install_cros_camera_diagnostics_policy",
+    ":install_enable_camera_diagnostics_sh",
     ":install_minijail_conf",
     ":libcros_camera_diagnostics_mojom",
   ]
@@ -99,4 +100,10 @@ install_seccomp_policy("install_cros_camera_diagnostics_policy") {
   sources = [ "seccomp_filter/cros-camera-diagnostics-${arch}.policy" ]
   outputs = [ "cros-camera-diagnostics.policy" ]
   install_path = "seccomp_policy"
+}
+
+# TODO(imranziad): Remove once enabled in CrOS release image.
+install_config("install_enable_camera_diagnostics_sh") {
+  sources = [ "init/enable_camera_diagnostics.sh" ]
+  install_path = "bin"
 }
