missive: Introduce server configuration controller
This change introduces the server configuration controller, this controller will be initialized on a follow up CL, just breaking up my changes to make them easier to review.

BUG=b:289117140
TEST=cros_sdk cros_workon_make --board=${BOARD} missive --test

Change-Id: Ie1dd8d6179fc2394cd4a7b989223c85442c2cb26
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5527539
Commit-Queue: Alberto Juarez <albertojuarez@google.com>
Reviewed-by: Leonid Baraz <lbaraz@chromium.org>
Tested-by: Alberto Juarez <albertojuarez@google.com>

--- a/missive/BUILD.gn
+++ b/missive/BUILD.gn
@@ -212,6 +212,7 @@ if (use.test) {
       "util/dynamic_flag_test.cc",
       "util/file_test.cc",
       "util/refcounted_closure_list_test.cc",
+      "util/server_configuration_controller_test.cc",
       "util/status_macros_test.cc",
       "util/status_test.cc",
       "util/statusor_test.cc",
