metrics: Flaky GN patching
... the structured metrics events are missing during builds.
```
error: use of undeclared identifier 'metrics'
```

BUG=b/338584949
TEST=CQ

Change-Id: I2ea7312453a6d8491624f3b808a47425e381293c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5528177
Reviewed-by: Jong Ahn <jongahn@chromium.org>
Reviewed-by: Tony Yeoman <tby@chromium.org>
Tested-by: Jae Hoon Kim <kimjae@chromium.org>

--- a/metrics/structured/BUILD.gn
+++ b/metrics/structured/BUILD.gn
@@ -109,6 +109,7 @@ source_set("structured_metrics") {
   ]
 
   deps = [
+    ":gen_structured_events",
     ":libsm_proto",
     ":storage",
     "//metrics:libmetrics",
