metrics: Support structured metrics in metrics_client
Allow metrics_client to output structured metrics by doing, say:

metrics_client --structured CrashReporting CrashReporterStatus \
--Status=0 --Collector=5 --IsCrashLoop=0

BUG=b:339322520
Fixed: b:339322520
TEST=Ran metrics_client --structured CrashReporting CrashReporterStatus --Status=401 --Collector=8 --IsCrashLoop=0
Got "EventsProto {StructuredEventProto {
event_name_hash:1308528214212923902 event_type:REGULAR
project_name_hash:13615523565054809415
Metric {name_hash:17029140179819671253 value_int64:401}
Metric {name_hash:10359177269713898166 value_int64:8}
Metric {name_hash:1930484523447744031 value_int64:0}}" on Chrome side
TEST=Confirmed metrics_client -c still worked
TEST=Confirmed metrics_client -W <file> -n 5 Platform.AnyCrashesDaily 5 1 100 50 still worked
TEST=Confirmed metrics_client -v SessionManager.SafeModeEnabled still worked

Cq-Depend:5531374
Change-Id: Ib59e1f356c6adf207c781d128db0e9e05d13bf83
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5531131
Commit-Queue: Ian Barkley-Yeung <iby@chromium.org>
Reviewed-by: Jong Ahn <jongahn@chromium.org>
Reviewed-by: Andrew Bregger <andrewbregger@google.com>
Tested-by: Ian Barkley-Yeung <iby@chromium.org>

--- a/metrics/structured/BUILD.gn
+++ b/metrics/structured/BUILD.gn
@@ -33,6 +33,25 @@ proto_library("libsm_proto") {
   use_pic = true
 }
 
+action("gen_metrics_client_structured_events") {
+  script = "gen_metrics_client_events.py"
+  inputs = [
+    "gen_metrics_client_events.py",
+    "codegen.py",
+    "sync/model.py",
+    "sync/model_util.py",
+    "templates_metrics_client.py",
+  ]
+  sources = [ _xml_file ]
+  outputs = [ _event_output_dir + "/metrics_client_structured_events.cc" ]
+  args = [
+    "--input",
+    rebase_path(_xml_file, root_build_dir),
+    "--output",
+    _event_output_dir,
+  ]
+}
+
 action("gen_structured_events") {
   script = "gen_events.py"
 
@@ -116,6 +135,17 @@ source_set("structured_metrics") {
   ]
 }
 
+static_library("libmetricsclientstructuredmetrics") {
+  sources = get_target_outputs(":gen_metrics_client_structured_events")
+
+  configs += [ ":target_defaults_pkg_deps" ]
+
+  deps = [
+    ":gen_metrics_client_structured_events",
+    ":libstructuredmetrics",
+  ]
+}
+
 source_set("test_support") {
   sources = [
     "fake_recorder.cc",
@@ -159,6 +189,19 @@ if (use.test) {
       ":test_support",
       "//common-mk/testrunner:testrunner",
       "//metrics:metrics_test_support",
+    ]
+  }
+  executable("metrics_client_structured_metrics_test") {
+    sources = [ "metrics_client_structured_metrics_test.cc" ]
+    configs += [
+      "//common-mk:test",
+      ":target_defaults_pkg_deps",
+    ]
+    run_test = true
+    deps = [
+      ":libmetricsclientstructuredmetrics",
+      "//common-mk/testrunner:testrunner",
+      "//metrics:metric_client_util",
     ]
   }
 }
