typecd: Record TBT device count on mode entry
Record TBT device count on mode entry. This can later be used to
determine whether or not a TBT3 or USB4 peripheral successfully
enumerated a new thunderbolt device in sysfs.

BUG=b:338471345
TEST=FEATURES=${BOARD} emerge-brya chromeos-base/typecd

Change-Id: Ib18c4540a9810da4fbc0dec2603ff30087047e3e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5529230
Commit-Queue: Jameson Thies <jthies@google.com>
Tested-by: Jameson Thies <jthies@google.com>
Reviewed-by: Benson Leung <bleung@google.com>

--- a/typecd/minijail/typecd.conf
+++ b/typecd/minijail/typecd.conf
@@ -12,6 +12,7 @@
 # - Mount the chromeos-config path so we can get system config information.
 # - Get a writeable and empty /sys tmpfs path.
 # - Mount the /sys/class directory required by typecd.
+# - Mount the /sys/bus/thunderbolt directory required by typecd.
 # - Mount the /sys/bus/usb directory required by typecd.
 # - Mount the /sys/devices directory required by typecd.
 # - Get a writeable and empty /var tmpfs path.
@@ -36,6 +37,7 @@ bind-mount = /run/udev
 bind-mount = /run/chromeos-config/v1
 mount = tmpfs,/sys,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M
 bind-mount = /sys/class
+bind-mount = /sys/bus/thunderbolt
 bind-mount = /sys/bus/usb
 bind-mount = /sys/devices
 mount = tmpfs,/var,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M
