Add limit for pending sent messages on dbus
Set the maximum number of pending messages addressed to a connection.
The limit is set to half of the maximum number of pending replies per
connection.

BUG=b:329038548
TEST=Test procedure as in
https://chromium-review.googlesource.com/c/chromiumos/third_party/dbus/+/5403887

Cq-Depend: chromium:5403887
Change-Id: I150e11f6d0db665f469a8742bd8c3dc48b8bc984
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5526304
Reviewed-by: Toni Barzic <tbarzic@chromium.org>
Reviewed-by: Ryan Hansberry <hansberry@chromium.org>
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>
Reviewed-by: Joshua Pius <joshuapius@google.com>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Commit-Queue: Marek Maślanka <mmaslanka@google.com>
Reviewed-by: Ben Reich <benreich@chromium.org>
Tested-by: Marek Maślanka <mmaslanka@google.com>
Reviewed-by: Radoslaw Biernacki <biernacki@google.com>
Reviewed-by: Aashay Shringarpure <aashay@google.com>

--- a/cros-disks/org.chromium.CrosDisks.conf
+++ b/cros-disks/org.chromium.CrosDisks.conf
@@ -60,4 +60,5 @@
            send_member="UnmountAll" />
   </policy>
   <limit name="max_replies_per_connection">512</limit>
+  <limit name="max_messages_per_connection">256</limit>
 </busconfig>
