--- a/featured/share/org.chromium.featured.conf
+++ b/featured/share/org.chromium.featured.conf
@@ -21,4 +21,5 @@
            send_member="HandleSeedFetched" />
   </policy>
   <limit name="max_replies_per_connection">512</limit>
+  <limit name="max_messages_per_connection">256</limit>
 </busconfig>
