--- a/power_manager/dbus/org.chromium.PowerManager.conf
+++ b/power_manager/dbus/org.chromium.PowerManager.conf
@@ -18,4 +18,5 @@
   </policy>
 
   <limit name="max_replies_per_connection">512</limit>
+  <limit name="max_messages_per_connection">256</limit>
 </busconfig>
