--- a/easy-unlock/org.chromium.EasyUnlock.conf
+++ b/easy-unlock/org.chromium.EasyUnlock.conf
@@ -28,4 +28,5 @@
            send_member="UnwrapSecureMessage" />
   </policy>
   <limit name="max_replies_per_connection">512</limit>
+  <limit name="max_messages_per_connection">256</limit>
 </busconfig>
