--- a/modemfwd/dbus/org.chromium.Modemfwd.conf
+++ b/modemfwd/dbus/org.chromium.Modemfwd.conf
@@ -66,4 +66,5 @@
   </policy>
 
   <limit name="max_replies_per_connection">512</limit>
+  <limit name="max_messages_per_connection">256</limit>
 </busconfig>
