vm_tools: Initial setup of /run/arcvm/ro
This CL is the initial step towards consolidating multiple
existing shared directories into fewer mount points:
 /run/arcvm/ro: Read-only shared directories
 /run/arcvm/rw: Writable shared directories

Design doc: go/arcvm-shared-dirs

BUG=b:237618542
BUG=b:327117904
TEST=adb shell ls /var/run/arc/ro/

Change-Id: I8a47ddeb600b71818f936d5517fd8e2a1960f254
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5528341
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Reviewed-by: Keiichi Watanabe <keiichiw@chromium.org>
Commit-Queue: Satoshi Niwa <niwa@chromium.org>
Tested-by: Satoshi Niwa <niwa@chromium.org>

--- a/vm_tools/init/vm_concierge.conf
+++ b/vm_tools/init/vm_concierge.conf
@@ -134,6 +134,29 @@ script
     set -- "$@" -b /run/pvm,,1
   fi
 
+  # Bind mounts under /run/arcvm/ro, the read-only shared directory.
+  # (go/arcvm-shared-dirs)
+  set -- "$@" -b /lib64,/run/arcvm/ro/lib64
+  set -- "$@" -b /usr/lib64,/run/arcvm/ro/usr/lib64
+  set -- "$@" -b /usr/share/fonts,/run/arcvm/ro/fonts
+  if [ -f "/usr/bin/vshd" ]; then
+    set -- "$@" -b /usr/bin/vshd,/run/arcvm/ro/usr/bin/vshd
+  fi
+  if [ -d "/run/arcvm/jemalloc" ]; then
+    set -- "$@" -b /run/arcvm/jemalloc,/run/arcvm/ro/jemalloc
+  fi
+  if [ -f "/run/vm/dev_mode" ]; then
+    if [ -d "/usr/local/lib64" ]; then
+      set -- "$@" -b /usr/local/lib64,/run/arcvm/ro/usr/local/lib64
+    fi
+    if [ -f "/usr/local/bin/stress-ng" ]; then
+      set -- "$@" -b /usr/local/bin/stress-ng,/run/arcvm/ro/usr/local/bin/stress-ng
+    fi
+    if [ -f "/usr/local/bin/trace-cmd" ]; then
+      set -- "$@" -b /usr/local/bin/trace-cmd,/run/arcvm/ro/usr/local/bin/trace-cmd
+    fi
+  fi
+
   # For vmm-swap feature.
   if [ -e "/dev/userfaultfd" ]; then
     set -- "$@" -b /dev/userfaultfd
