--- a/vm_tools/tmpfiles.d/arcvm.conf
+++ b/vm_tools/tmpfiles.d/arcvm.conf
@@ -13,6 +13,7 @@ d= /run/arcvm/android-data/mount 0770 crosvm 655360
 # ugid 656360:656360 maps to system:system on the Android side.
 d= /run/arcvm/testharness 0770 656360 656360
 # Create the directory mounted as /var/run/arc/jemalloc.
+# TODO(b/237618542): Remove this after migrating this to /run/arcvm/ro/jemalloc
 d= /run/arcvm/jemalloc 0775 crosvm crosvm
 
 # Create directories for APK Cache. APK cache is located at
