--- a/ippusb_bridge/minijail/ippusb-bridge.conf
+++ b/ippusb_bridge/minijail/ippusb-bridge.conf
@@ -24,3 +24,4 @@ mount = run,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 bind-mount = /run/udev
 bind-mount = /run/ippusb,/run/ippusb,1
 mount = var,/var,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
+bind-mount = /run/dbus
