heartd: Create Intel PMT directory through tmpfiles.d
BUG=b:289023919
TEST=Manual test on DUT

Change-Id: I7730c4e139945c1282ade49df01c68763fd2e965
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5528682
Tested-by: Kerker Yang <kerker@chromium.org>
Reviewed-by: Denny Huang <dennyh@google.com>
Commit-Queue: Kerker Yang <kerker@chromium.org>

--- a/heartd/tmpfiles.d/heartd.conf
+++ b/heartd/tmpfiles.d/heartd.conf
@@ -5,3 +5,4 @@
 # A tmpfile.d config to set up the paths expected by heartd.
 
 d= /var/lib/heartd/ 0755 heartd heartd
+d= /var/lib/heartd/intel_pmt 0755 heartd heartd
