usb_bouncer: Enable USB quality disconnect metrics
Add new structured and UMA metrics to the USB bouncer to record
kernel errors on disconnect.

BUG=b:338470734
TEST=FEATURES=test emerge-${BOARD} chromeos-base/usb_bouncer. Checked
that metric event logged to /var/lib/metric includes all fields in the
structured metric.

Change-Id: I779838d10c81e6399ba1537c19ea36e71b4c3fec
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5531242
Reviewed-by: Allen Webb <allenwebb@google.com>
Commit-Queue: Jameson Thies <jthies@google.com>
Tested-by: Jameson Thies <jthies@google.com>

--- a/usb_bouncer/BUILD.gn
+++ b/usb_bouncer/BUILD.gn
@@ -21,6 +21,7 @@ pkg_config("target_defaults") {
     "libcap",
     "libchrome",
     "libcrypto",
+    "libdebugd-client",
     "libmetrics",
     "libminijail",
     "libsession_manager-client",
