init: Move encrypted_reboot_vault from cryptohome
encrypted-reboot-vault is only used by chromeos_startup (excluding tast
test).

Move the code in /init, alter include file and library dependencies, fix
repo upload warnings.

BUG=b:172221451
TEST=Emerge both cryptohome and chromeos-init. Unit test, CQ.

Change-Id: I7605b5fd7936abcf70edf4bf164634338986fd8c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5531130
Reviewed-by: Daniil Lunev <dlunev@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>

--- a/init/BUILD.gn
+++ b/init/BUILD.gn
@@ -9,6 +9,7 @@ group("all") {
     ":chromeos_startup",
     ":clobber-state",
     ":cros_sysrq_init",
+    ":encrypted-reboot-vault",
     ":file_attrs_cleaner_tool",
     ":install_lvm_config",
     ":install_setuid_restriction",
@@ -112,7 +113,6 @@ static_library("libcrosstartup") {
   ]
   configs += [ ":target_defaults" ]
   defines = []
-  libs = [ "hwsec-foundation" ]
   deps = [
     ":libfile_attrs_cleaner",
     ":libinit_utils",
@@ -252,6 +252,15 @@ executable("mount-encrypted") {
   sources = [ "mount_encrypted/mount_encrypted.cc" ]
   configs += [ ":target_defaults" ]
   deps = [ ":libmount_encrypted" ]
+  install_path = "sbin"
+}
+
+executable("encrypted-reboot-vault") {
+  sources = [
+    "encrypted_reboot_vault/encrypted_reboot_vault.cc",
+    "encrypted_reboot_vault/encrypted_reboot_vault_main.cc",
+  ]
+  configs += [ ":target_defaults" ]
   install_path = "sbin"
 }
 
