lorgnette: Add initial WWCB SANE backend SinglePage test
As part of WWCB certification process we are adding a test suite for
running on a DUT connected with a scanner.

This CL adds a new sane_backend_wwcb_tests gn target as well as an
initial test that only does minimal automated/manual validation. This
test will later be extended. This CL is only a first pass at the
initial ScanTest::TestSinglePage test.

Notable missing features from ScanTest:TestSinglePage:
- color mode test parameter
- resolution test parameter
- automated validation using identify -verbose command
- automated validation of tester provided scanner caps

BUG=b:343701655
TEST=emerge and flash to dedede
TEST=on dedede run:/usr/bin/sane_backend_wwcb_tests
--scanner=pfufs:fi-7160:A36DH60979
TEST=on dedede run:/usr/bin/sane_backend_wwcb_tests
--scanner=pfufs:fi-7160:A36DH60979 -- --gtest_fail_fast

Change-Id: I7580acca74d7a52139e1026fcf769a1bc4b8b8a6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5535047
Reviewed-by: Nathan Muggli <nmuggli@google.com>
Tested-by: Aaron Massey <aaronmassey@google.com>
Commit-Queue: Aaron Massey <aaronmassey@google.com>

--- a/lorgnette/BUILD.gn
+++ b/lorgnette/BUILD.gn
@@ -14,6 +14,7 @@ group("all") {
     ":install_system_service",
     ":lorgnette",
     ":lorgnette_cli",
+    ":sane_backend_wwcb_tests",
     "//lorgnette/tmpfiles.d",
   ]
   if (use.test) {
@@ -154,6 +155,24 @@ install_config("install_init") {
 install_config("install_minijail_config") {
   sources = [ "minijail/lorgnette.conf" ]
   install_path = "minijail_conf"
+}
+
+executable("sane_backend_wwcb_tests") {
+  sources = [
+    "sane_backend_tests/main.cc",
+    "sane_backend_tests/scan_test.cc",
+  ]
+  configs += [
+    "//common-mk:test",
+    ":target_defaults",
+  ]
+  deps = [
+    ":liblorgnette",
+    "//common-mk/testrunner:testrunner",
+  ]
+
+  # We need googletest without USE=test, so we don't include liblorgnette_config_test.
+  pkg_deps = [ "libchrome-test" ]
 }
 
 if (use.test) {
