patchpanel: define LifelineFDService
This patch adds a new patchpanel service for managing and watching file
descriptors committed to patchpanel by DBus clients (ConnectNamespace,
SetDNSRedirectionRuleRequest, tethering and Direct downstream networks).

This new service can create a local RAII-style objects that the other
services answering the client RPC requests can hold onto and use for
cancelling watching their client file descriptors. The local services do
not need to manage the file descriptor watching themselves and are
notified when the client file descriptor is invalidated.

This service will allow to move some logic of Manager into separate
files to improve unit tests.

BUG=b:336883268
TEST=FEATURES=test emerge-$BOARD patchpanel

Change-Id: Idab6d5037b387e6d1a4830869644ab665399b1b4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5532125
Reviewed-by: Chih-Yu Huang <akahuang@chromium.org>
Tested-by: Hugo Benichi <hugobenichi@google.com>
Commit-Queue: Hugo Benichi <hugobenichi@google.com>
Reviewed-by: Jason Iman <jasongustaman@chromium.org>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -144,6 +144,7 @@ static_library("libpatchpanel") {
     "firewall.cc",
     "guest_ipv6_service.cc",
     "iptables.cc",
+    "lifeline_fd_service.cc",
     "manager.cc",
     "minijailed_process_runner.cc",
     "multicast_counters_service.cc",
@@ -320,6 +321,7 @@ if (use.test) {
       "downstream_network_service_test.cc",
       "firewall_test.cc",
       "guest_ipv6_service_test.cc",
+      "lifeline_fd_service_test.cc",
       "mac_address_generator_test.cc",
       "manager_test.cc",
       "minijailed_process_runner_test.cc",
