diagnostics: Check {vid:pid} for SD Card event detection
If a SD Card Reader is connected internally through a USB hub, it will
be viewed as a USB device. The files team maintains a mapping of
{vid:pid} to the actual device type.

Implement the same logic in healthd to check whether a SD card event
was created.

BUG=b:330825644,b:338311200
TEST=(shell) FEATURES=test P2_TEST_FILTER='*' emerge-jacuzzi diagnostics
    (DUT) cros-health-tool event --category=sd_card

Change-Id: I58f5be1fde2be7eecf3f70add509ee899cb0c1a8
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5400856
Commit-Queue: Ethan Cheng <yycheng@google.com>
Tested-by: Ethan Cheng <yycheng@google.com>
Reviewed-by: Kerker Yang <kerker@chromium.org>

--- a/diagnostics/cros_healthd/system/BUILD.gn
+++ b/diagnostics/cros_healthd/system/BUILD.gn
@@ -62,6 +62,7 @@ source_set("system") {
     "powerd_adapter_impl.cc",
     "system_config.cc",
     "system_utilities_impl.cc",
+    "usb_device_info.cc",
   ]
 }
 
@@ -139,6 +140,7 @@ if (use.test) {
       "ground_truth_test.cc",
       "powerd_adapter_impl_test.cc",
       "system_config_test.cc",
+      "usb_device_info_test.cc",
     ]
     configs += [ ":system_test_pkg_deps" ]
     deps = [
