ml: init: fix invalid local usage
The local command is valid only in functions, and upstart scripts
are run as standalone shell commands.

In init/ml-service.conf line 43:
  local dbus_interface
  ^---^ SC2168 (error): 'local' is only valid in functions.

BUG=None
TEST=`cros lint` doesn't error out

Change-Id: I936467c1aa653bc82422a9b74a4689dc10d8c51f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5535154
Tested-by: Mike Frysinger <vapier@chromium.org>
Commit-Queue: Andrew Moylan <amoylan@chromium.org>
Auto-Submit: Mike Frysinger <vapier@chromium.org>
Reviewed-by: Andrew Moylan <amoylan@chromium.org>

--- a/ml/init/ml-service.conf
+++ b/ml/init/ml-service.conf
@@ -107,7 +107,7 @@ script
 end script
 
 post-start script
-  local dbus_interface
+  dbus_interface=''
   if [ "${TASK}" = "mojo_service" ]; then
     dbus_interface="org.chromium.MachineLearning"
   elif [ "${TASK}" = "adaptive_charging" ]; then
