--- a/libhwsec-foundation/init/hwsec-shutdown-signals.conf
+++ b/libhwsec-foundation/init/hwsec-shutdown-signals.conf
@@ -16,7 +16,8 @@ script
   # system in the startup stage, some daemons may start after we send the
   # signals. We should make sure we shutdown all daemons correctly before
   # the process_killer involved.
-  for _ in {1..10}; do
+  i=0
+  while [ $(( i += 1 )) -le 10 ]; do
     initctl emit hwsec-stop-clients-signal
     initctl emit hwsec-stop-tpm_manager-signal
     initctl emit hwsec-stop-low-level-tpm-daemon-signal
