--- a/init/upstart/test-init/cryptohome-dbus-perf.conf
+++ b/init/upstart/test-init/cryptohome-dbus-perf.conf
@@ -16,7 +16,7 @@ script
 
   execution_time() {
     local start_time=$(date +%s%N)
-    $@ >/dev/null 2>/dev/null
+    "$@" >/dev/null 2>/dev/null
     echo $((`date +%s%N` - $start_time))
   }
 
