trunks: init: fix invalid bashism
The `[` command only supports `=`, never `==`.

In init/trunksd.conf line 32:
  if [ "${ERRNO}" == "${READ_ERROR}" ]; then
                  ^-- SC3014 (error): In dash, == in place of = is not supported.

BUG=b:264326384
TEST=`cros lint` doesn't show errors

Change-Id: I7e46511e0531f6367df7f12a08f637833c461016
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5533772
Auto-Submit: Mike Frysinger <vapier@chromium.org>
Tested-by: Mike Frysinger <vapier@chromium.org>
Reviewed-by: Yi Chou <yich@google.com>
Commit-Queue: Yi Chou <yich@google.com>

--- a/trunks/trunksd.conf
+++ b/trunks/trunksd.conf
@@ -42,7 +42,7 @@ pre-start script
   if [ -z "${ERRNO}" ] || [ "${ERRNO}" = "0" ]; then
     return
   fi
-  if [ "${ERRNO}" == "${READ_ERROR}" ]; then
+  if [ "${ERRNO}" = "${READ_ERROR}" ]; then
     logger -t trunksd "Error reading ${LAST_ERROR_PATH}..rebinding regardless"
   fi
   logger -t trunksd "Rebinding TPM driver upon write errno ${ERRNO}"
