regmon: Use system_api proto interface
Now that the regmon D-Bus interface has been moved to system_api to
facilitate sharing with Chrome, remove it from the regmon directory and
use it from there instead.

BUG=b:339905710
TEST=cros build-packages --board=${BOARD} chromeos-base/system_api chromeos-base/regmon
TEST=cros_run_unit_tests --board=${BOARD} --packages chromeos-base/regmon

Change-Id: Ib47dffd4854687f540710e40d987b36a0e1346c6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5533991
Tested-by: Chris Mullins <crmullins@chromium.org>
Reviewed-by: Aiden Chiavatti <chiav@chromium.org>
Reviewed-by: Ramya Gopalan <ramyagopalan@google.com>
Commit-Queue: Chris Mullins <crmullins@chromium.org>

--- a/regmon/dbus/BUILD.gn
+++ b/regmon/dbus/BUILD.gn
@@ -31,8 +31,5 @@ static_library("dbus_adaptor") {
   ]
   configs += [ ":target_defaults" ]
   public_deps = [ ":regmon_dbus_adaptors" ]
-  deps = [
-    "//regmon/proto:libregmonprotopolicyviolation",
-    "//regmon/regmon:regmon_service",
-  ]
+  deps = [ "//regmon/regmon:regmon_service" ]
 }
