missive: A few more streamlining weak ptrs.
Moved MissiveStorageModule into `missive` component,
reducing dependencies.
Eliminated Delegate that was very simple, intended for tests but never used.

BUG=b:325905699
TEST=cros_sdk cros_workon_make --board=${BOARD} missive --test
TEST=Manual VM test

Change-Id: I682680b476398c3bfc4278b915f07ba21331a013
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5533992
Reviewed-by: Josh Hilke <jrhilke@google.com>
Commit-Queue: Leonid Baraz <lbaraz@chromium.org>
Tested-by: Leonid Baraz <lbaraz@chromium.org>

--- a/missive/client/BUILD.gn
+++ b/missive/client/BUILD.gn
@@ -24,13 +24,14 @@ static_library("missive_client") {
     "missive_client.cc",
     "missive_client.h",
     "missive_dbus_constants.h",
+    "missive_storage_module.cc",
+    "missive_storage_module.h",
   ]
   configs += [ ":target_defaults" ]
   deps = [
     "//missive/proto:libmissiveprotointerface",
     "//missive/proto:libmissiveprotorecord",
     "//missive/proto:libmissiveprotorecordconstants",
-    "//missive/storage:missive_storage_module",
     "//missive/util:disconnectable_client",
     "//missive/util:status",
   ]
