--- a/flexor/Cargo.toml
+++ b/flexor/Cargo.toml
@@ -15,6 +15,7 @@ nix = "0.23"
 tar = "0.4.40"
 tempfile = "3.0"
 xz2 = "0.1.7"
+rand = "0.8.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uguid = "2.2.0"
