libchromeos-rs: remove lazy_static usage
The Crossystem code is (ab)using a global Mutex containing the unit type
to control access to the underlying C crossystem library; this Mutex
doesn't need an Arc wrapper for this purpose, and it can be statically
initialized instead of using `lazy_static` to create the Mutex at
runtime since Mutex::new() is const since Rust 1.63.

BUG=None
TEST=CQ

Change-Id: I0ad13262c50e66029b3e2346739a0686639a81d4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5542249
Tested-by: Daniel Verkamp <dverkamp@chromium.org>
Commit-Queue: Daniel Verkamp <dverkamp@chromium.org>
Reviewed-by: Allen Webb <allenwebb@google.com>

--- a/libchromeos-rs/Cargo.toml
+++ b/libchromeos-rs/Cargo.toml
@@ -9,7 +9,6 @@ pkg-config = { version = "0.3.11", optional = true }
 
 [dependencies]
 dbus = { version = "0.9", optional = true }
-lazy_static = { version = "1.4.0", optional = true }
 libc = "0.2"
 log = "0.4"
 multi_log = "0.1.2"
@@ -26,4 +25,4 @@ zeroize = { version = "1.2.0", features = ["zeroize_derive"] }
 
 [features]
 default = []
-chromeos-module = ["dbus", "lazy_static", "pkg-config", "system_api", "vboot_reference-sys"]
+chromeos-module = ["dbus", "pkg-config", "system_api", "vboot_reference-sys"]
